# map-reduce-distributed-grpc

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  driver.py  environment.yaml  logging_config.py  map_reduce.proto  map_reduce_pb2.py  map_reduce_pb2_grpc.py  map_utils.py  pyproject.toml  reduce_utils.py  requirements.txt  utils.py  worker.py
.github/workflows/: ci.yml
data/: fox.txt  sea.txt
docs/: visualization.html
scripts/: generate_protos.py
src/mapreduce/: __init__.py  config.py  driver.py  map_reduce.proto  map_reduce_pb2.py  map_reduce_pb2_grpc.py  map_utils.py  reduce_utils.py  utils.py  worker.py
tests/: test_e2e.py  test_unit.py  test_worker.py
