[project]
name = "map-reduce-distributed-grpc"
version = "0.1.0"
description = "A distributed MapReduce word-count over gRPC (driver + workers)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.66,<2",
    "protobuf>=5.26",
]

[project.scripts]
mapreduce-driver = "mapreduce.driver:main"
mapreduce-worker = "mapreduce.worker:main"

[dependency-groups]
dev = [
    "grpcio-tools>=1.66,<2",
    "pytest>=8.2",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "snakeviz>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapreduce"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["src/mapreduce/map_reduce_pb2.py", "src/mapreduce/map_reduce_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
